docs(plugin): correct Maven .mvn/jvm.config precedence for pluginJvmArgs
The earlier docs claimed a project .mvn/jvm.config wins over our injected
MAVEN_OPTS. The standard Maven 3.x launcher actually places jvm.config
BEFORE MAVEN_OPTS on the java command line (bin/mvn prepends it; bin/mvn.cmd
passes %JVM_CONFIG_MAVEN_PROPS% before %MAVEN_OPTS%), so for last-wins
flags like -Xmx our appended args win. The behavior is unchanged and
correct (symmetric with Gradle, opt-in, and surgical — only conflicting
flags are overridden while the project's other jvm.config entries still
apply); only the documentation/comments were inverted.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>